--- a/blog/package.json
+++ b/blog/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "art-template": "^4.13.2",
-    "bootstrap": "^3.3.7",
+    "blueimp-md5": "^2.18.0",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^3.4.1",
     "express": "^4.17.1",
     "express-art-template": "^1.0.1",
     "jquery": "^3.5.1",
